#43074 fix doublelined org picker on small screens

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_rta.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_rta.scss
@@ -253,4 +253,10 @@
 	height: $full-padding*10;
 }
 
+ @media screen and (min-width: 768px) {
+        .rta-filters-container .con-flex {
+            align-self: flex-end;
+        }
+    }
+
 
